<resources>
    <string name="app_name">Quran_app</string>
    <string name="home_fragment">Suparah Fragment</string>
    <string name="sport_fragment">Surah Fragment</string>
    <string name="movie_fragment">BookMarks Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suparah_fragment">Supparah</string>
    <string name="quran_pak">QURAN PAK</string>
    <string name="resume">Resume</string>
    <string name="_10">10</string>
    <string name="parah">Qala Fama Khatbukum قال فما خطبكم</string>
    <string name="select_supparah">Select Supparah</string>
    <string name="_144">144</string>
    <string name="previous_surah">Previous</string>
    <string name="next_surah">Next</string>
    <string name="verticle_navigation">Verticle Navigation</string>
    <string name="search_ayah">GO-TO</string>
    <string name="surah_fatiha">Surah Fatiha</string>
    <string name="_1">1</string>
    <string name="parah_key">PARAH_KEY</string>
    <string name="bookmark_key">BOOKMARK_KEY</string>
    <string name="surah_key">SURAH_KEY</string>
    <string name="parah_1">1</string>
    <string name="parah_2">20</string>
    <string name="parah_3">38</string>
    <string name="parah_4">56</string>
    <string name="image">Image</string>
    <string name="verse">Verse</string>
    <string name="page_number">Page Number</string>
    <string name="recent_page">Resume</string>
    <string name="vertical">Vertical</string>
    <string name="horizontol">Horizontol</string>
    <string name="title">ABCD</string>
    <string name="title_activity_pdf_view_full_size">PdfViewFullSizeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
<string name="app_title">Quran App</string>
    <string name="app_install_link">https://theappglobe.blogspot.com/p/privacy-policy.html</string>
    <string name="RATE_US_ON_GOOGLE_PLAY">RATE US ON GOOGLE PLAY</string>
    <string name="RATE_US_REQUEST">We would greatly appreciate if you can rate us.</string>
    <string name="RATE_US_MSG_0">We are looking hard for a better user experience.</string>
    <string name="WE_LIKE_YOU_TOO">We like you too!</string>
    <string name="THANKS_FOR_YOUR_FEEDBACK">Thanks for your feedback</string>
    <string name="RATE">RATE</string>
    <string name="the_best_we_can_get">The best we can get :)</string>
    <string name="PLEASE_LEAVE_US_FEEDBACK">Please leave us some feedback</string>
    <string name="OH_NO">Oh, no!</string>
    <string name="share_via">Share Via</string>
    <string name="feedback_email">teams@itglobe.pk</string>
    <string name="email_subject">Tell us more!!</string>
    <string name="email_text_settings">
Let me recommend you this application

</string>
    <string name="tool_bar_title_for_surahs">Surah\'s Names</string>
    <string name="app_share_text">Share This App</string>


</resources>