<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    android:layout_gravity="top"
    app:cardElevation="10dp"
    android:paddingBottom="10dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/surrah_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:layout_marginEnd="10dp"
            android:background="#197278"
            android:contentDescription="@string/image"
            android:padding="5dp"
            android:src="@drawable/ic_1"
            app:layout_constraintBottom_toTopOf="@+id/page_bookmarks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bookmarks_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:minLines="2"
            android:text="@string/parah"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/page_bookmarks"
            app:layout_constraintEnd_toStartOf="@+id/delete_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_verse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookmarks_name"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="12dp"
            android:drawablePadding="2dp"
            android:text="@string/page_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/page_bookmarks"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookmarks_name" />

        <TextView
            android:id="@+id/page_bookmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookmarks_name"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="12dp"
            android:drawablePadding="2dp"
            android:text="@string/_10"

            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/no_verse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/no_verse"
            app:layout_constraintTop_toTopOf="@+id/no_verse" />

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/surrah_image"
            app:layout_constraintEnd_toStartOf="@+id/surrah_image"
            app:layout_constraintStart_toEndOf="@+id/bookmarks_name"
            app:layout_constraintTop_toTopOf="@+id/surrah_image"
            app:srcCompat="@drawable/ic_bookmark"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/bookmark_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ABCD"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/page_bookmarks"
            app:layout_constraintTop_toBottomOf="@+id/surrah_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>