<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Quran_app.FullscreenContainer"
    tools:context=".controller.PdfViewFullSizeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/menu_viewer"
            app:title=""
            android:textAlignment="center"
            android:textDirection="firstStrong"
            app:titleTextAppearance="@style/Base.CardView"
            app:subtitleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>


    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
<!--    <TextView-->
<!--        android:id="@+id/fullscreen_content"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:keepScreenOn="true"-->
<!--        android:text="@string/dummy_content"-->
<!--        android:textColor="?attr/fullscreenTextColor"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold" />-->

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdf_viewer"
        android:layout_width="match_parent"
        android:background="@color/grey_6"
        android:layout_height="match_parent"
        android:visibility="visible"
        />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"

            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.Quran_app.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:background="@color/green"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <LinearLayout

                android:layout_weight="1"
                android:id="@+id/lin_lay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                >

                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/previous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_previus"
                    android:contentDescription="@string/previous_surah" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/previous_surah"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lin_lay2"
                >
                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_next"
                    android:contentDescription="@string/next_surah" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_surah"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lin_lay3">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/horizontol_verticle_split"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/ic_verticle_split"
                    android:contentDescription="@string/vertical" />
                <TextView
                    android:id="@+id/horiz_vertical_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lin_lay4">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_search"
                    android:contentDescription="@string/search_ayah" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_ayah"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center"

                    />
            </LinearLayout>
<!--            <Button-->
<!--                android:id="@+id/dummy_button"-->
<!--                style="?android:attr/buttonBarButtonStyle"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/dummy_button" />-->

        </LinearLayout>
    </FrameLayout>

</FrameLayout>